--- a/feedback.html
+++ b/feedback.html
@@ -15,12 +15,12 @@
         >
         <!-- Animate CSS CDN -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-        <title>Manish Tiwari | Web Developer</title>
+        <title>Syeda Umme Haani  | Web Developer</title>
     <title>Feedback Form</title>
 </head>
 <body>
     <nav>
-        <h1>Manish Tiwari</h1>
+        <h1>Syeda Umme Haani </h1>
         <ul class="navigation">
             <li>
                 <a href="./index.html" class="nav-link">About</a>
