--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         >
         <!-- Animate CSS CDN -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-        <title>Manish Tiwari | Web Developer</title>
+        <title>Syeda Umme Haani  | Web Developer</title>
     </head>
     <body>
         <!-- Navbar -->
         <nav>
-            <h1>Manish Tiwari</h1>
+            <h1>Syeda Umme Haani </h1>
             <ul class="navigation">
                 <li>
                     <a href="#about" class="nav-link">About</a>
@@ -214,7 +214,7 @@
             <p class="copy">&copy; Copyright 2023</p>
             <p class="copy">
                 Built with &#x2661; by
-                <a href="https://github.com/manish-9245" target="_blank">Manish Tiwari
+                <a href="https://github.com/manish-9245" target="_blank">Syeda Umme Haani 
                 </a
         >
             </p>
